1999-01-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* actcltk.m4 (INCPLACES, LIBPLACES): Remove B19 guess.
	(LIBPLACES): Update CYGFS path to be for B20.

1999-01-26  Alex Lancaster  <alex@santafe.edu>

	* acswarm.m4 (al_INIT_SWARM): Include AM_PROG_LIBTOOL macros.

1999-01-25  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acexesuffix.m4, acguilibs.m4, aclinkflags.m4, acxpm.m4:
	Use __CYGWIN__ instead of __CYGWIN32__.

1999-01-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acfind.m4: Expand includedir before comparing against /usr/include.

1999-01-21  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* acffi.m4 (FFILDFLAGS): Use -rpath instead of $RPATH.

	* acfind.m4 (_ldflags): Likewise.

	* actcltk.m4 (TCLLDFLAGS, TKLDFLAGS): Likewise.

	* acrpath.m4: Removed.

	* Makefile.am (EXTRADIST): Remove acrpath.m4.

1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* actcltk.m4 (INCPLACES): Add /Cygnus/cygwin-b20/include.
	(LIBPLACES): Add /Cygnus/cygwin-b20/H-i586-cygwin32/lib.

1999-01-13  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* acobjclibs.m4 (CC): Set to "$OBJC -x objective-c" for duration
	of test.

1999-01-04  Alex Lancaster  <alex@santafe.edu>

	* acswarm.m4 (al_INIT_SWARM)): Add extractions for OBJC and
	OBJCFLAGS as per configure.in, so that other Swarm-related
	automake packages will inherit the appropriate rules.
	Use OBJC, OBJCFLAGS inherited from config.swarm

1998-12-21  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* achdf5.m4: Don't abort if libhdf5 is not found.

1998-12-19  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add achdf5.m4.

	* achdf5.m4 (md_FIND_HDF5): New file.

1998-12-17  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* acpng.m4 (md_FIND_PNG): Simplify usage to single argument.

	* acfind.m4 (AC_FIND_LIB): Don't require second argument, default
	to first. 
	(AC_FIND_INCLUDE): Add /usr/local/include as a checked directory.

1998-10-28  Marcus G. Daniels  <mgd@chama.santafe.edu>
